================================================================
This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0

- Russian language support

Version 1.6.73 : by Calamath
[LoreWear]small optimizations for some unnatural movements in automatic wearing.
-- no longer changes outfits right after login.
-- no longer wearing your favorite wet suit during battles, even if you select "use wetsuit" option.
-- no longer wearing your favorite combat uniform while riding or swimming, even if you select "use combat uniform" option.
-- no longer wearing a helmet while swimming, even if you select "turn off 'hide your helm' during combat" option.
-- no longer changes your favorite wet suit if you ninja players skipping across the water. (effective after Update 25)

Version 1.6.72 : by Calamath
[HotFix] Fixed a bug that a new LorePlay user would get a nil error when launching the game. Thanks Melhael for the report.

Version 1.6.71 : by Calamath
[HotFix] Changed the default value of the 'Use Outfit' item to 'OFF' in add-on setting LoreWear Management Range.
         If you want to switch outfit automatically by LoreWear, please change the setting to 'ON'
[HotFix] Fixed a bug regarding savedata migration process, and the 'OFF' settings would be converted correctly.
         Added a special savedata fix command '/loreplay.fixdata1670' for your characters logged in with Version 1.6.70. 
       --NOTE: The user can modify the add-on settings checkbox as needed, or use the command above for each characters.

Version 1.6.70 : by Calamath
[COMPATIBILITY-BREAKING CHANGE]
- MAJOR REVAMP OF LOREWEAR FEATURE
  Complete transition to Calamath's new outfit change algorithm.